--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "firebase": "^9.14.0",
     "framer-motion": "^7.6.4",
     "next": "latest",
+    "nextjs-progressbar": "^0.0.16",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-firebase-hooks": "^5.0.3",
+    "react-hot-toast": "^2.4.0",
     "react-icons": "^4.6.0",
     "react-loader-spinner": "^5.3.4",
     "react-moment": "^1.1.2",
