--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "nextjs-progressbar": "^0.0.16",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-error-boundary": "^4.0.2",
     "react-firebase-hooks": "^5.0.3",
     "react-icons": "^4.6.0",
     "react-loader-spinner": "^5.3.4",
